Maintain Java 8 compatibility